[package]
name = "bullet-echo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
fps_counter = "*"
find_folder = "*"
serde_json = "*"
serde = "*"
rand = "*"

vector2d = { git = "https://github.com/ThomasByr/rust-vector2d" }
ray-tracing = { path = "ray-tracing" }
