[package]
name = "bullet-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
fps_counter = "*"
find_folder = "*"
serde_json = "*"
serde = "*"
rand = "*"

math_vector = { git = "https://github.com/ThomasByr/rust-math_vector" }
ray-tracing = { path = "ray-tracing" }
